# sphinxcontrib-phpdomain

./: .gitignore  .travis.yml  CHANGES  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  doc.yml
doc/: changes.rst  conf.py  index.rst  reference.rst  usage.rst
sphinxcontrib/: __init__.py  phpdomain.py
test/: baseline.txt  conf.py  index.rst  log.html  log.md  log.txt  logging.html  logging.md  method.html  method.md  ns.html  ns.md  rst_doc.html  rst_doc.md  rst_doc2.html  rst_doc2.md  rst_index.html  rst_nesting_regression.html  test_doc.rst  test_nesting_regression.rst
test/must-build/: conf.py  test_doc.rst
test/myst/: ns.html  rst_doc.md  rst_doc2.md  rst_index.html  rst_index.md  rst_nesting_regression.md
test/unit/: Makefile  conf.py  index.html  index.md  index.rst  method.html  method.md  method.rst  ns.html  ns.md  ns.rst  requirements.txt  test_doc.html  test_doc.rst  test_doc2.html  test_doc2.rst  test_nesting_regression.html
test/unit/_build/doctrees/: environment.pickle  index.doctree  method.doctree  ns.doctree  test_doc.doctree  test_doc2.doctree  test_nesting_regression.doctree
test/unit/_build/html/: .buildinfo  genindex.html  index.html  method.html  ns.html  ns.html.result  objects.inv  php-modindex.html  search.html  searchindex.js  test_doc.html  test_doc2.html  test_doc2.html.result  test_nesting_regression.html
test/unit/_build/html/_sources/: test_doc2.rst.txt
